# finalverse

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE_MAPLEAI.md  README.md  create_cargo_files.sh  diesel.toml  docker-compose.yml  fv  quick_setup.sh  start_services.sh  stop_services.sh  test.sh  test_services.sh
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Client_WebSocket.html  Finalverse-DashBoard.html  webViewer.html
client/mock-client/: Cargo.toml
client/mock-client/src/: connection_test.rs  enhanced_client.rs  main.rs
client/txtViewer/: Cargo.toml
client/txtViewer/src/: connection_test.rs  enhanced_client.rs  main.rs  tui.rs
config/: Cargo.toml  envoy.yaml  finalverse.toml
config/src/: config.rs  environment.rs  lib.rs  loader.rs  validator.rs
crates/ai-common/: Cargo.toml
crates/audio-core/: Cargo.toml
crates/audio-core/src/: lib.rs
crates/config/: Cargo.toml  README.md
crates/config-core/: Cargo.toml
crates/config-core/src/: lib.rs  main.rs
crates/config/src/: config.rs  environment.rs  loader.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: character.rs  echo.rs  error.rs  events.rs  lib.rs  types.rs
crates/core/src/database/: connection.rs  schema.rs
crates/core/src/database/repositories/: world_repository.rs
crates/core/src/models/: entity.rs  events.rs  world_state.rs
crates/ecosystem/: Cargo.toml
crates/ecosystem/src/: lib.rs  simulator.rs
crates/events/: Cargo.toml
crates/events/src/: event_bus.rs  events.rs  lib.rs  local.rs  nats.rs
crates/finalverse-ai-common/: Cargo.toml
crates/finalverse-ai-common/src/: lib.rs
crates/finalverse-health/: Cargo.toml
crates/finalverse-plugin/: Cargo.toml
crates/finalverse-plugin/src/: lib.rs
crates/finalverse-protocol/: Cargo.toml
crates/finalverse-protocol/src/: action.rs  lib.rs
crates/finalverse-wasm-runtime/src/: lib.rs
crates/finalverse-world-engine/: Cargo.toml
crates/finalverse-world-engine/src/: ecosystem.rs
crates/fv-ai-common/: Cargo.toml
crates/fv-config/: Cargo.toml
crates/fv-core/: Cargo.toml
crates/fv-events/: Cargo.toml
crates/fv-events/src/: event_bus.rs  events.rs  lib.rs  local.rs  nats.rs
crates/fv-events/tests/: integration_test.rs
crates/fv-health/: Cargo.toml
crates/fv-health/src/: lib.rs
crates/fv-plugin/: Cargo.toml
crates/fv-plugin/src/: lib.rs
crates/grpc-client/: Cargo.toml
crates/grpc-client/src/: lib.rs
crates/health/: Cargo.toml
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/mapleai-agent/: Cargo.toml
crates/mapleai-agent/src/: agent.rs  lib.rs  llm_bridge.rs  planner.rs
crates/metabolism/: Cargo.toml
crates/metabolism/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/protocol/src/: agent.rs  lib.rs  reasoning.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: lib.rs
crates/wasm-runtime/tests/: simple.rs  simple_plugin.wat
crates/world-engine/: Cargo.toml
crates/world-engine/src/: ecosystem.rs  lib.rs
crates/world3d/: Cargo.toml
crates/world3d/src/: assets.rs  echo_entities.rs  entities.rs  grid.rs  interactive_objects.rs  lib.rs  region.rs  spatial.rs  terrain.rs  terrain_generator.rs  world.rs
docker/: Dockerfile.service  entrypoint.sh
docs/: Echo_Character_Types.md  advance_features_impl.md  advance_features_plan.md  advance_features_setup.md  advanced_features_todo.md  advence_features_impl.md  architecture_overview.md  enhanced_architecture.md  implementation_plan.md  mapleai_agent_framework.md  plugin_dev_guide.md
libs/common/: Cargo.toml
libs/common/src/: events.rs  lib.rs  types.rs
libs/health/: Cargo.toml
libs/health/src/: lib.rs
libs/protocol/: Cargo.toml
libs/protocol/src/: event_bus.rs  lib.rs
migrations/2025_01_01_000001_initial_schema/: down.sql  up.sql
plugins/greeter-plugin/: Cargo.toml  build.rs
plugins/greeter-plugin/src/: lib.rs
proto/: audio.proto  common.proto  story.proto  world.proto  world3d.proto
scripts/: README.md  build-plugins.sh  cleanup.sh  cleanup_and_restart.sh  finalverse-orchestrator.sh  finalverse.sh  health_check.sh  monitor_services.sh  quick_fix.sh  setup_mvp.sh  start_services.sh  stop_services.sh  test_client.sh  test_services.sh  test_services_improved.sh  update_services.sh
server/: Cargo.toml
server/src/: cli.rs  cli_main.rs  handlers.rs  lib.rs  main.rs  mesh.rs  plugin.rs  server_manager.rs
services/ai-orchestra/: Cargo.toml
services/ai-orchestra/src/: lib.rs  llm_integration.rs  main.rs
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/asset-service/: Cargo.toml
services/asset-service/src/: main.rs
services/behavior-ai/: Cargo.toml  README.md
services/behavior-ai/src/: main.rs
services/community/: Cargo.toml
services/community-service/: Cargo.toml
services/community-service/src/: main.rs
services/community/src/: main.rs
services/echo-engine/: Cargo.toml
services/echo-engine/src/: main.rs
services/first-hour/: Cargo.toml  build.rs
services/first-hour/src/: asset_generator.rs  echo_entities.rs  echo_spawner.rs  export.rs  first_hour_manager.rs  interactive_objects.rs  lib.rs  main.rs  scenes.rs  weaver_landing_3d.rs  world_client.rs
services/harmony-service/: Cargo.toml
services/harmony-service/src/: main.rs
services/plugin/: Cargo.toml
services/plugin/src/: lib.rs
services/procedural-gen/: Cargo.toml
services/procedural-gen/src/: main.rs  world3d_generator.rs
services/realtime-gateway/: Cargo.toml
services/realtime-gateway/src/: lib.rs  main.rs  spatial_streaming.rs
services/service-registry/: Cargo.toml
services/service-registry/src/: lib.rs
services/silence-service/: Cargo.toml
services/song-engine/: Cargo.toml
services/story-engine/: Cargo.toml
services/symphony-engine/: Cargo.toml  build.rs
services/websocket-gateway/: Cargo.toml
services/world-engine/: Cargo.toml  build.rs
services/world3d-service/: Cargo.toml
(+29 files in other folders)
