# Cargo.toml - Root workspace configuration
[workspace]
resolver = "2"
members = [
    # Core Services
    "services/api-gateway",
    "services/song-engine",
    "services/story-engine",
    "services/echo-engine",
    "services/harmony-service",
    "services/silence-service",
    "services/community",
    "services/asset-service",
    "services/websocket-gateway",
    "services/realtime-gateway",
    "services/service-registry",
    "crates/plugin",
    "plugins/greeter-plugin",
    
    # AI Infrastructure
    "services/ai-orchestra",
    "services/procedural-gen",
    "services/behavior-ai",
    
    # Shared Libraries
    "crates/fv-core",
    "crates/protocol",
    "crates/ai-common",
    "crates/health",
    "crates/wasm-runtime",
    "crates/world-engine",
    
    # Client
    "client/txtViewer",
    "crates/events",

    # server
    "server",
    "crates/config-core",
    
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Finalverse Team"]
license = "Copyright Finalverse Inc."

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
async-nats = "0.33"
async-trait = "0.1"
tokio-tungstenite = "0.21"

# Web framework
axum = "0.7.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
tonic = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Finalverse internal crates
fv-common = { path = "crates/fv-core" }
health = { path = "crates/health" }
protocol = { path = "crates/protocol" }
ai-common = { path = "crates/ai-common" }
service-registry = { path = "services/service-registry" }
events = { path = "crates/events" }
finalverse-server = { path = "server" }
config-core = { path = "crates/config-core" }
plugin = { path = "crates/plugin" }
wasm-runtime = { path = "crates/wasm-runtime" }
world-engine = { path = "crates/world-engine" }

# QUIC/Networking
quinn = "0.10"
rustls = "0.21"

# AI/ML
candle-core = "0.3"
ort = "1.16" # ONNX Runtime

# config
toml = "0.8"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
once_cell = "1.19"
crossterm = "0.29"
env_logger = "0.11"
ratatui = "0.29"
colored = "3.0"
futures = "0.3"
tokio-test = "0.4"
warp = "0.3"
libloading = "0.7"
wasmtime = "13"
