# Cargo.toml - Root workspace configuration
[workspace]
resolver = "2"
members = [
    # Core Services
    "services/api-gateway",
    "services/song-engine",
    "services/story-engine",
    "services/echo-engine",
    "services/harmony-service",
    "services/silence-service",
    "services/community",
    "services/asset-service",
    "services/websocket-gateway",
    "services/realtime-gateway",
    "services/service-registry",
    "crates/fv-plugin",
    "plugins/greeter-plugin",
    
    # AI Infrastructure
    "services/ai-orchestra",
    "services/procedural-gen",
    "services/behavior-ai",
    
    # Shared Libraries
    "crates/fv-core",
    "crates/finalverse-protocol",
    "crates/fv-ai-common",
    "crates/fv-health",
    "crates/wasm-runtime",
    "crates/world-engine",
    
    # Client
    "client/txtViewer",
    "crates/fv-events",

    # server
    "server",
    "crates/fv-config",
    
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Finalverse Team"]
license = "Copyright Finalverse Inc."

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
async-nats = "0.33"
async-trait = "0.1"
tokio-tungstenite = "0.21"

# Web framework
axum = "0.7.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
tonic = "0.11"
tonic-build = "0.13.1"
tonic-health = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Finalverse internal crates
fv-common = { path = "crates/fv-core" }
fv-health = { path = "crates/fv-health" }
finalverse-protocol = { path = "crates/finalverse-protocol" }
fv-ai-common = { path = "crates/fv-ai-common" }
service-registry = { path = "services/service-registry" }
fv-events = { path = "crates/fv-events" }
finalverse-server = { path = "server" }
fv-config = { path = "crates/fv-config" }
fv-plugin = { path = "crates/fv-plugin" }
wasm-runtime = { path = "crates/wasm-runtime" }
world-engine = { path = "crates/world-engine" }

# QUIC/Networking
quinn = "0.10"
rustls = "0.21"

# AI/ML
candle-core = "0.3"
ort = "1.16" # ONNX Runtime

# config
toml = "0.8"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
once_cell = "1.19"
crossterm = "0.29"
env_logger = "0.11"
ratatui = "0.29"
colored = "3.0"
futures = "0.3"
tokio-test = "0.4"
warp = "0.3"
libloading = "0.7"
wasmtime = "13"

[patch.crates-io]
tonic = "0.11"

