# Cargo.toml - Root workspace configuration
[workspace]
resolver = "2"
members = [
    # Core Services
    "services/api-gateway",
    "services/asset-service",
    "services/community",
    "services/echo-engine",
    "services/first-hour",
    "services/harmony-service",
    "services/realtime-gateway",
    "services/service-registry",
    "services/silence-service",
    "services/song-engine",
    "services/story-engine",
    "services/symphony-engine",
    "services/websocket-gateway",
    "services/world-engine",
    "services/world3d-service",
    "plugins/greeter-plugin",
    
    # AI Infrastructure
    "services/behavior-ai",
    "services/ai-orchestra",
    "services/procedural-gen",
    
    # Shared Libraries
    "crates/ai-common",
    "crates/audio-core",
    "crates/config",
    "crates/core",
    "crates/events",
    "crates/health",
    "crates/plugin",
    "crates/protocol",
    "crates/wasm-runtime",
    "crates/ecosystem",
    "crates/world3d",
    
    # Client
    "client/txtViewer",

    # server
    "server",
    
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Finalverse Team"]
license = "Copyright Finalverse Inc."

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
async-nats = "0.33"
async-trait = "0.1"
tokio-tungstenite = "0.21"

# Web framework
axum = "0.7.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
tonic = "0.11"
tonic-build = "0.13.1"

# version 0.11 is need for HealthServer in server for now
tonic-health = "0.11"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# For 3D audio positioning
nalgebra = { version = "0.32", features = ["serde-serialize"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sysinfo = { version = "0.35.2", features = ["process"] }

# Finalverse internal crates
finalverse-world3d = { path = "crates/world3d" }
finalverse-audio-core = { path = "crates/audio-core" }
finalverse-core = { path = "crates/core" }
finalverse-health = { path = "crates/health" }
finalverse-protocol = { path = "crates/protocol" }
finalverse-ai-common = { path = "crates/ai-common" }
service-registry = { path = "services/service-registry" }
finalverse-events = { path = "crates/events" }
finalverse-server = { path = "server" }
finalverse-config = { path = "crates/config" }
finalverse-plugin = { path = "crates/plugin" }
finalverse-wasm-runtime = { path = "crates/wasm-runtime" }
finalverse-ecosystem = { path = "crates/ecosystem" }

# QUIC/Networking
quinn = "0.10"
rustls = "0.21"

# AI/ML
candle-core = "0.3"
ort = "1.16" # ONNX Runtime

# config
toml = "0.8"
num_cpus = "1.16"
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"
once_cell = "1.19"
crossterm = "0.29"
env_logger = "0.11"
ratatui = "0.29"
colored = "3.0"
futures = "0.3"
tokio-test = "0.4"
warp = "0.3"
libloading = "0.7"
wasmtime = "13"

# 3d-world
dashmap = "5.5"
noise = "0.8"  # For terrain generation
image = "0.24"  # For heightmap export
bincode = "1.3"  # For efficient serialization


