[package]
name = "finalverse-cli"
version = "0.1.0"
edition = "2021"
authors = ["Finalverse Team"]
description = "Command-line interface for Finalverse server administration"
license = "MIT"

[dependencies]
finalverse-server = { path = "../server" }
# finalverse-server.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rustyline.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
colored = "3.0.0"

[[bin]]
name = "finalverse-cli"
path = "src/main.rs"
