[package]
name = "finalverse-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
ratatui.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
fv-plugin.workspace = true
once_cell.workspace = true
uuid = { workspace = true, features = ["v4"] }
tonic.workspace = true

service-registry.workspace = true

[[bin]]
name = "finalverse-server"
path = "src/main.rs"

[[bin]]
name = "finalverse-cli"
path = "src/cli_main.rs"

[lib]
name = "finalverse_server"
path = "src/lib.rs"
