[package]
name = "finalverse-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
ratatui.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
finalverse-plugin.workspace = true
once_cell.workspace = true
uuid = { workspace = true, features = ["v4"] }
tonic.workspace = true
tonic-health = "0.11.0"

service-registry.workspace = true
futures.workspace = true
futures-util = "0.3.31"
serde_json = "1.0.140"

colored = "3.0.0"
rustyline = "16.0.0"


[[bin]]
name = "finalverse-server"
path = "src/main.rs"

[[bin]]
name = "finalverse-cli"
path = "src/cli_main.rs"

[lib]
name = "finalverse_server"
path = "src/lib.rs"
