[package]
name = "mock-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock-client"
path = "src/main.rs"

[dependencies]
finalverse-common = { path = "../../libs/common" }
finalverse-protocol = { path = "../../libs/protocol" }
reqwest = { version = "0.11", features = ["json"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
