[package]
name = "mock-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock-client"
path = "src/main.rs"

[dependencies]
fv-common = { path = "../../crates/fv-core" }
protocol = { path = "../../crates/protocol" }
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
