[package]
name = "txtViewer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "txtViewer"
path = "src/main.rs"

[dependencies]
fv-common = { path = "../../crates/fv-core" }
protocol = { path = "../../crates/protocol" }
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
