[package]
name = "config-core"
version.workspace = true
edition.workspace = true
authors = ["Finalverse Team"]
description = "Configuration management for Finalverse server"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
thiserror.workspace = true
num_cpus.workspace = true
axum.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lib]
name = "config_core"
path = "src/lib.rs"

[[bin]]
name = "config-core"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"