[package]
name = "finalverse-core"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
