[package]
name = "finalverse-events"
version.workspace = true
edition.workspace = true
license = "Copyright Finalverse Inc."

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-nats.workspace = true
futures-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

