[package]
name = "finalverse-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true
tracing.workspace = true
libloading = { workspace = true, optional = true }

[features]
dynamic = ["libloading"]

[lib]
name = "finalverse_plugin"
path = "src/lib.rs"
