[package]
name = "finalverse-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
finalverse-common.workspace = true
serde.workspace = true
async-trait.workspace = true
tonic.workspace = true
tokio.workspace = true
redis.workspace = true
futures-util.workspace = true
tracing.workspace = true
serde_json.workspace = true

