[package]
name = "fv-health"
version.workspace = true
edition.workspace = true
license = "Copyright Finalverse Inc."

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
warp.workspace = true
axum.workspace = true

[dev-dependencies]
tokio-test.workspace = true
