[package]
name = "fv-plugin"
version.workspace = true
edition.workspace = true
license = "Copyright Finalverse Inc."

[dependencies]
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true
tracing.workspace = true
libloading = { workspace = true, optional = true }
anyhow.workspace = true
service-registry.workspace = true

[features]
dynamic = ["libloading"]

[lib]
name = "fv_plugin"
path = "src/lib.rs"
