[package]
name = "plugin"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true
tracing.workspace = true
libloading = { workspace = true, optional = true }
anyhow.workspace = true
service-registry.workspace = true

[features]
dynamic = ["libloading"]

[lib]
name = "plugin"
path = "src/lib.rs"
