[package]
name = "world-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
fv-common.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
health.workspace = true
service-registry.workspace = true
rand.workspace = true

[[bin]]
name = "world-engine"
path = "src/bin/world-engine.rs"
