[package]
name = "world-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
fv-common.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
fv-health.workspace = true
service-registry.workspace = true
rand.workspace = true
async-trait = "0.1.88"
warp = "0.3.7"
env_logger = "0.11.8"

[[bin]]
name = "world-engine"
path = "src/bin/world-engine.rs"
