[package]
name = "finalverse-world-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
finalverse-core.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
finalverse-health.workspace = true
service-registry.workspace = true
rand.workspace = true
async-trait = "0.1.88"
warp = "0.3.7"
env_logger = "0.11.8"
finalverse-audio-core.workspace = true
redis.workspace = true

