[package]
name = "greeter-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fv-plugin.workspace = true
async-trait.workspace = true
tonic.workspace = true
axum.workspace = true
tracing.workspace = true
service-registry.workspace = true
anyhow.workspace = true

[build-dependencies]
tonic-build = "0.13.1"