[package]
name = "greeter-plugin"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
finalverse-plugin.workspace = true
async-trait.workspace = true
tonic.workspace = true
axum.workspace = true
tracing.workspace = true
service-registry.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
# finalverse-plugin = { path = "../../crates/plugin" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
tonic-build.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }