# services/ai-orchestra/Cargo.toml
[package]
name = "ai-orchestra"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ai-orchestra"
path = "src/main.rs"

[dependencies]
fv-common = { path = "../../crates/fv-core" }
protocol = { path = "../../crates/protocol" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
health.workspace = true
service-registry.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
async-trait.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
