[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# finalverse-common = { path = "../../libs/common" }
# finalverse-protocol = { path = "../../libs/protocol" }
finalverse-common.workspace = true
finalverse-protocol.workspace = true
finalverse-health.workspace = true
finalverse-service-registry.workspace = true
axum.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
