[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
# finalverse-common = { path = "../../crates/finalverse-core" }
# finalverse-protocol = { path = "../../crates/finalverse-protocol" }
fv-common.workspace = true
protocol.workspace = true
health.workspace = true
service-registry.workspace = true
axum.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
