[package]
name = "echo-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "echo-engine"
path = "src/main.rs"

[dependencies]
fv-common.workspace = true
finalverse-protocol.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
fv-health.workspace = true
service-registry.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
