# // services/first-hour/Cargo.toml
[package]
name = "first-hour"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

# finalverse-world3d = { path = "../../crates/finalverse-world3d" }
finalverse-world3d.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true
anyhow.workspace = true
image = "0.24.9"
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"

[[bin]]
name = "first-hour"
path = "src/main.rs"