# // services/first-hour/Cargo.toml
[package]
name = "first-hour"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

# finalverse-world3d = { path = "../../crates/finalverse-world3d" }
finalverse-world3d.workspace = true
finalverse-core.workspace = true
finalverse-metabolism.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing.workspace = true
anyhow.workspace = true
image = "0.24.9"
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
maplit = "1"

redis = { workspace = true, features = ["tokio-comp"] }
tonic = "0.10"
prost = "0.12"
dashmap = "5.5"
sysinfo.workspace = true

[[bin]]
name = "first-hour"
path = "src/main.rs"

[lib]
name = "first_hour"
path = "src/lib.rs"
