# services/harmony-service/Cargo.toml
[package]
name = "harmony-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harmony-service"
path = "src/main.rs"

[dependencies]
fv-common.workspace = true
anyhow.workspace = true
fv-events.workspace = true
finalverse-protocol.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
fv-health.workspace = true
service-registry.workspace = true
