# services/harmony-service/Cargo.toml
[package]
name = "harmony-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harmony-service"
path = "src/main.rs"

[dependencies]
finalverse-core.workspace = true
anyhow.workspace = true
finalverse-events.workspace = true
finalverse-protocol.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
finalverse-logging.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
finalverse-health.workspace = true
service-registry.workspace = true
warp.workspace = true
async-trait = "0.1.88"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"