[package]
name = "procedural-gen"
version.workspace = true
edition.workspace = true

[dependencies]
finalverse-core = { path = "../../crates/core" }
finalverse-protocol = { path = "../../crates/protocol" }
finalverse-health.workspace = true
service-registry.workspace = true
axum.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
anyhow.workspace = true

[[bin]]
name = "procedural-gen"
path = "src/main.rs"
