[package]
name = "finalverse-realtime-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
futures.workspace = true
libloading = { workspace = true, optional = true }
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[features]
dynamic = ["libloading"]

[[bin]]
name = "finalverse-realtime-gateway"
path = "src/main.rs"
