[package]
name = "realtime-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
futures.workspace = true
libloading = { workspace = true, optional = true }
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true

[features]
dynamic = ["libloading"]

[[bin]]
name = "realtime-gateway"
path = "src/main.rs"
