[package]
name = "realtime-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
finalverse-world3d.workspace = true
axum.workspace = true
tokio.workspace = true
futures.workspace = true
libloading = { workspace = true, optional = true }
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
warp = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
dashmap = "7.0.0-rc2"

[features]
dynamic = ["libloading"]

[[bin]]
name = "realtime-gateway"
path = "src/main.rs"
